--- a/CST205/superweb.html
+++ b/CST205/superweb.html
@@ -1,4 +1,4 @@
-"""<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transition//EN" "http://www.w3.org/TR/html4/loose.dtd"> <html>                    <div class="responsive-image"><div class="delayed-image-load" data-src="https://ichef.bbc.co.uk/wwhp/{width}/cpsprodpb/10893/production/_106513776_muellerreport-indexstylized.jpg" data-alt="Stylised depiction of Trump and his report in a graphic form"><img src="https://ichef.bbc.co.uk/wwhp/144/cpsprodpb/10893/production/_106513776_muellerreport-indexstylized.jpg" alt="Stylised depiction of Trump and his report in a graphic form" /></div></div>                </div>
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transition//EN" "http://www.w3.org/TR/html4/loose.dtd"> <html>                    <div class="responsive-image"><div class="delayed-image-load" data-src="https://ichef.bbc.co.uk/wwhp/{width}/cpsprodpb/10893/production/_106513776_muellerreport-indexstylized.jpg" data-alt="Stylised depiction of Trump and his report in a graphic form"><img src="https://ichef.bbc.co.uk/wwhp/144/cpsprodpb/10893/production/_106513776_muellerreport-indexstylized.jpg" alt="Stylised depiction of Trump and his report in a graphic form" /></div></div>                </div>
 
                 
                 <div class="media__content">
@@ -773,4 +773,4 @@
                    aria-hidden="true">
                     The best news photos of the week                </a>
             </div>
-</html>"""
+</html>
